--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^4.6.1",
+    "@prisma/client": "^4.14.0",
+    "@prisma/instrumentation": "^4.8.0",
+    "@prisma/sdk": "^4.0.0",
+    "@vercel/postgres": "^0.3.0",
     "apollo-server": "^3.9.0",
+    "bson": "^5.1.0",
+    "bson-objectid": "^2.0.4",
     "cuid": "^2.1.8",
-    "dayjs": "^1.11.4",
+    "dayjs": "^1.11.7",
+    "dotenv-json": "^1.0.0",
     "graphql": "^16.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "prisma": "^4.6.1"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "prisma": "^4.14.0"
   }
 }
